<resources>
    <string name="app_name">GADSLeaderboard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="leaderboard">LEADERBOARD</string>
    <string name="submit">submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="learning_leaders">Learning Leaders</string>
    <string name="skill_iq_leaders">Skill IQ Leaders</string>
    <string name="project_submission">Project Submission</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="project_on_github_link">Project on GITHUB (link)</string>
    <string name="submission_successful">Submission Successful</string>
    <string name="submission_not_successful">Submission not Successful</string>
    <string name="yes">Yes</string>
    <string name="are_you_sure">Are you sure ?</string>

</resources>