<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_on_secondary"
    tools:context=".UiComponents.SubmitActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/include"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar1"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/background_dark">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="313dp"
                    android:layout_height="96dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.592"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.011"
                    app:srcCompat="@drawable/gads" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>




    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/project_submission"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/holo_orange_dark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:alpha="@dimen/material_emphasis_high_type"
        android:background="@drawable/line_shape"

        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:background="@android:color/white"
        android:hint="@string/last_name"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/firstName"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:autofillHints=""
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:autofillHints=""
        android:background="@android:color/white"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:padding="15dp"
        app:layout_constraintEnd_toStartOf="@+id/lastName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/gitHubLink"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@android:color/white"
        android:hint="@string/project_on_github_link"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="@+id/emailAddress"
        app:layout_constraintStart_toStartOf="@+id/emailAddress"
        app:layout_constraintTop_toBottomOf="@+id/emailAddress"
        android:autofillHints=""
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@android:color/white"
        android:hint="@string/email_address"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="@+id/lastName"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastName"
        android:autofillHints=""
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/submit_final"
        android:layout_width="256dp"
        android:layout_height="57dp"
        android:layout_gravity="end"
        android:layout_margin="20dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/curved_button_orange"
        android:text="@string/submit"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gitHubLink" />


</androidx.constraintlayout.widget.ConstraintLayout>